--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,8 +1,8 @@
 ---
 galaxy_info:
-  author: Patrik Uytterhoeven
+  author: 'Patrik Uytterhoeven'
   description: 
-  company: Open-Future
+  company: 'Open-Future'
   license: license (GPLv2) 
   min_ansible_version: 1.2
   #
