--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,5 +1,5 @@
 ---
- galaxy_info:
+- galaxy_info:
    author: "Patrik Uytterhoeven"
    description: "Zabbix Server"
    company: "Open Future"
@@ -102,7 +102,7 @@
   #- packaging
   #- system
   #- web
- dependencies: []
+dependencies: []
   # List your role dependencies here, one per line. Only
   # dependencies available via galaxy should be listed here.
   # Be sure to remove the '[]' above if you add dependencies
