--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,21 +1,21 @@
 ---
-- galaxy_info:
-   author: "Patrik Uytterhoeven"
-   description: "Zabbix Server"
-   company: "Open Future"
-   license: GPLv2 
-   min_ansible_version: 1.4
+galaxy_info:
+  author: Patrik Uytterhoeven 
+  description: Zabbix Server
+  company: OpenFuture
+  license: GPLv2
+  min_ansible_version: 1.4
   #
   # Below are all platforms currently available. Just uncomment
   # the ones that apply to your role. If you don't see your 
   # platform on this list, let us know and we'll get it added!
   #
   #platforms:
-  - name: EL
-    versions:
+  #- name: EL
+  #  versions:
   #  - all
   #  - 5
-     - 6
+  #  - 6
   #- name: GenericUNIX
   #  versions:
   #  - all
@@ -97,7 +97,7 @@
   #- database:nosql
   #- database:sql
   #- development
-   - monitoring
+  #- monitoring
   #- networking
   #- packaging
   #- system
