--- a/meta/main.yml
+++ b/meta/main.yml
@@ -10,12 +10,12 @@ galaxy_info:
   # the ones that apply to your role. If you don't see your 
   # platform on this list, let us know and we'll get it added!
   #
-  #platforms:
-  #- name: EL
-  #  versions:
+  platforms:
+  - name: EL
+    versions:
   #  - all
   #  - 5
-  #  - 6
+    - 6
   #- name: GenericUNIX
   #  versions:
   #  - all
