added meta data for ansible

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -97,7 +97,7 @@ galaxy_info:
   #- database:nosql
   #- database:sql
   #- development
-  #- monitoring
+  - monitoring
   #- networking
   #- packaging
   #- system
