--- a/zabbix-server.yml
+++ b/zabbix-server.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: zabbix22
+- hosts: vagrantbox
   remote_user: root
   vars_files:
     - 'defaults/postgresql.yml'
@@ -11,3 +11,4 @@
     - include: 'handlers/main.yml'
   vars_prompt:
     ip_httpd: "On what ip should apache run ?"
+#    install_method: "Do you want to install from online or offline sources (online/offline) ?"
