--- a/defaults/postgresql.yml
+++ b/defaults/postgresql.yml
@@ -29,7 +29,7 @@ pg_cfg_srv_listen_port: '5432'
 # connection slot, plus lock space (see max_locks_per_transaction).
 
 pg_cfg_srv_max_connections: '50'
-pg_cfg_srv_superuser_reserved_connections: '3'
+pg_cfg_srv_superuser_reserved_connections: '3'       # extra superuser connections
 pg_cfg_srv_unix_socket_directory: '/var/run/postgresql'
 pg_cfg_srv_unix_socket_group: ''
 pg_cfg_srv_unix_socket_permissions: '0777'
@@ -37,11 +37,13 @@ pg_cfg_srv_unix_socket_permissions: '0777'
 pg_cfg_srv_bonjour: 'off'     # advertise secondserver via Bonjour
 pg_cfg_srv_bonjour_name: '' # defaults to the computer name
 
+## postgresql memory = work_mem * max_connections
 
-pg_cfg_srv_shared_buffers: '128kB'
+pg_cfg_srv_shared_buffers: '128MB'                 # 70% of total memory should be good
 pg_cfg_srv_temp_buffers: '8MB'                     # min 800kB
 pg_cfg_srv_max_prepared_transactions: '0'          # zero disables the feature
-
+pg_cfg_srv_enable_indexonlyscan: 'on'              # Only use the index if it cant get all the info needed
+pg_cfg_srv_effective_cache_size: '128MB'           # 70% of total memory should be good
 pg_cfg_srv_work_mem: '8MB'
 pg_cfg_srv_maintenance_work_mem: '16MB' # min 1MB
 pg_cfg_srv_max_stack_depth: '2MB'                  # min 100kB
