Added iptables and selinux to the configuration

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -9,3 +9,6 @@
   service: name=httpd state=restarted
   tags:
     -http
+
+- name: restart iptables
+  action: service name=iptables state=restarted
