--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,21 +1,28 @@
 ---
 galaxy_info:
-  author: Patrik Uytterhoeven 
-  description: Zabbix Server
-  company: OpenFuture
-  license: GPLv2
-  min_ansible_version: 1.4
+  author: your name
+  description: 
+  company: your company (optional)
+  # Some suggested licenses:
+  # - BSD (default)
+  # - MIT
+  # - GPLv2
+  # - GPLv3
+  # - Apache
+  # - CC-BY
+  license: license (GPLv2, CC-BY, etc)
+  min_ansible_version: 1.2
   #
   # Below are all platforms currently available. Just uncomment
   # the ones that apply to your role. If you don't see your 
   # platform on this list, let us know and we'll get it added!
   #
-  platforms:
-  - name: EL
-    versions:
+  #platforms:
+  #- name: EL
+  #  versions:
   #  - all
   #  - 5
-    - 6
+  #  - 6
   #- name: GenericUNIX
   #  versions:
   #  - all
@@ -36,6 +43,11 @@ galaxy_info:
   #  - 12.3
   #  - 13.1
   #  - 13.2
+  #- name: Amazon
+  #  versions:
+  #  - all
+  #  - 2013.03
+  #  - 2013.09
   #- name: GenericBSD
   #  versions:
   #  - all
@@ -88,7 +100,7 @@ galaxy_info:
   # Below are all categories currently available. Just as with
   # the platforms above, uncomment those that apply to your role.
   #
-  categories:
+  #categories:
   #- cloud
   #- cloud:ec2
   #- cloud:gce
@@ -97,7 +109,7 @@ galaxy_info:
   #- database:nosql
   #- database:sql
   #- development
-  - monitoring
+  #- monitoring
   #- networking
   #- packaging
   #- system
