--- a/meta/main.yml
+++ b/meta/main.yml
@@ -100,7 +100,7 @@ galaxy_info:
   # Below are all categories currently available. Just as with
   # the platforms above, uncomment those that apply to your role.
   #
-  #categories:
+  categories:
   #- cloud
   #- cloud:ec2
   #- cloud:gce
@@ -109,7 +109,7 @@ galaxy_info:
   #- database:nosql
   #- database:sql
   #- development
-  #- monitoring
+  - monitoring
   #- networking
   #- packaging
   #- system
