--- a/tasks/mysql.yml
+++ b/tasks/mysql.yml
@@ -6,6 +6,7 @@
 
 - name: Create Zabbix Database for MySQL
   mysql_db: name={{zbx_server_DBName}} state=present
+  register: db_created
 
 - name: Create Zabbix User for MySQL
   mysql_user: name={{zbx_server_DBUser}} password={{zbx_server_DBPassword}} priv={{zbx_server_DBName}}.*:ALL state=present
@@ -16,3 +17,4 @@
     - schema.sql
     - images.sql
     - data.sql
+  when: db_created|changed
