--- a/tasks/RedHat.yml
+++ b/tasks/RedHat.yml
@@ -4,7 +4,8 @@
   yum: name=policycoreutils state=present
 
 - name: Install Zabbix key
-  rpm_key: key=http://repo.zabbix.com/zabbix-official-repo.key state=present
+  #  rpm_key: key=http://repo.zabbix.com/zabbix-official-repo.key state=present
+  yum: name={{zbx_server_repo}} state=present
 
 - name: Copy Zabbix Repo Config
   template: src=zabbix.repo.j2 dest=/etc/yum.repos.d/zabbix.repo
